--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 .vs/ConsoleApp4/v16/Server/sqlite3/db.lock
+.vs/ConsoleApp4/v16/.suo
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.deps.json
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.dll
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.exe
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.pdb
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.runtimeconfig.dev.json
+ConsoleApp4/bin/Debug/netcoreapp3.1/ConsoleApp4.runtimeconfig.json
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.csproj.FileListAbsolute.txt
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.csprojAssemblyReference.cache
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.dll
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.exe
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.pdb
