--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,19 @@ ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.csprojAssemblyReference.cache
 ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.dll
 ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.exe
 ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.pdb
+.vs/ConsoleApp4/DesignTimeBuild/.dtbcache
+.vs/ConsoleApp4/v16/.suo
+.vs/ConsoleApp4/v16/Server/sqlite3/storage.ide
+.vs/ConsoleApp4/v16/Server/sqlite3/storage.ide-shm
+.vs/ConsoleApp4/v16/Server/sqlite3/storage.ide-wal
+.vs/odevKartt/v16/.suo
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+ConsoleApp4/obj/ConsoleApp4.csproj.nuget.cache
+ConsoleApp4/obj/ConsoleApp4.csproj.nuget.dgspec.json
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.assets.cache
+ConsoleApp4/obj/Debug/netcoreapp3.1/ConsoleApp4.csprojAssemblyReference.cache
+ConsoleApp4/obj/project.assets.json
+ConsoleApp4/obj/Release/netcoreapp3.1/ConsoleApp4.AssemblyInfo.cs
+ConsoleApp4/obj/Release/netcoreapp3.1/ConsoleApp4.AssemblyInfoInputs.cache
+ConsoleApp4/obj/Release/netcoreapp3.1/ConsoleApp4.assets.cache
